--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,12 @@ header{
     align-items: center;
     z-index: 1000;
 }
+@media(max-width:660px){
+   header{
+    padding: 30px 20px 30px 20px;
+    }
+}
+
 header .logo{
 color: #fff;
 font-weight: 700;
